fix: gap between "Категорія (за типом):" and select

--- a/client/src/admin/components/ProductManagement/ProductForm/TypeSelect/index.module.scss
+++ b/client/src/admin/components/ProductManagement/ProductForm/TypeSelect/index.module.scss
@@ -9,6 +9,7 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 136%;
+    margin-bottom: 16px;
   }
 
   select {
